--- a/templates/default/print/printbalancelist.html
+++ b/templates/default/print/printbalancelist.html
@@ -72,7 +72,7 @@
 			{/if}
 		</TD>
 		<TD ALIGN="LEFT" NOWRAP>
-			{$balancelist[balancelist].customername|truncate:25:"..."}
+			{$balancelist[balancelist].customername|truncate:25:"&hellip;"}
 		</TD>
 		<TD ALIGN="LEFT">
 			{$balancelist[balancelist].comment|wordwrap:42:"<br />\n"}
