--- a/templates/default/rt/rtprintstats.html
+++ b/templates/default/rt/rtprintstats.html
@@ -40,7 +40,7 @@
 			{counter}
 		</TD>
 		<TD>
-			<B>{$list[list].customername|truncate:"50":"...":true} ({$list[list].customerid|string_format:"%04d"})</B>
+			<B>{$list[list].customername|truncate:"50":"&hellip;":true} ({$list[list].customerid|string_format:"%04d"})</B>
 		</TD>
 		<TD ALIGN="RIGHT">
 			{$list[list].total}
