--- a/templates/default/rt/rtticketprint.html
+++ b/templates/default/rt/rtticketprint.html
@@ -26,7 +26,7 @@
 			{trans("Subject:")}
 		</TD>
 		<TD class="bold nobr">
-			{$ticket.subject|truncate:50:"..."|escape}
+			{$ticket.subject|truncate:50:"&hellip;"|escape}
 		</TD>
 	</TR>
 	<TR>
