--- a/templates/default/choose/choosenode.html
+++ b/templates/default/choose/choosenode.html
@@ -63,7 +63,7 @@
 			    {if $nodelist[nodelist].location}
 			    <tr>
 				<td width="1%"><img src="img/home.gif" alt=""></td>
-				<td width="99%" class="nobr">{$nodelist[nodelist].location|truncate:60:"...":true}</td>
+				<td width="99%" class="nobr">{$nodelist[nodelist].location|truncate:60:"&hellip;":true}</td>
 			    </tr>
 			    {/if}
 			</table>
