--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -209,7 +209,7 @@
 			<BR><B>{assign var=type value=$doc.type}{$_DOCTYPES.$type}</B>
 		</TD>
 		<TD class="nobr" onclick="window.open('?m=documentview&amp;id={$doc.docid}');">
-			{$doc.title|truncate:40:"...":true}
+			{$doc.title|truncate:40:"&hellip;":true}
 			{if $doc.fromdate || $doc.todate}<BR>
 			    {if $doc.fromdate}{trans("from")} {$doc.fromdate|date_format:"%Y/%m/%d"}{/if}
 			    {if $doc.todate}{trans("to")} {$doc.todate|date_format:"%Y/%m/%d"}{/if}
@@ -220,7 +220,7 @@
 			</a>
 			{/if}
 		</TD>
-		<TD class="nobr"><A href="?m=customerinfo&amp;id={$doc.customerid}">{$doc.name|truncate:40:"...":true}</A></TD>
+		<TD class="nobr"><A href="?m=customerinfo&amp;id={$doc.customerid}">{$doc.name|truncate:40:"&hellip;":true}</A></TD>
 		<TD class="lms-ui-buttons text-right nobr">
 			{$docattach = $doc.attachments[0]}
 			{buttons}
