--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -28,7 +28,7 @@
                     {/if}
                     <br>
                     <a href="?m=userinfo&amp;id={$user.id}"
-                       style="font-weight: normal;" {if isset($user.noaccess)} class="lms-ui-crossed"{/if}>{$user.name|truncate:"25":"...":true|escape}</a>
+                       style="font-weight: normal;" {if isset($user.noaccess)} class="lms-ui-crossed"{/if}>{$user.name|truncate:"25":"&hellip;":true|escape}</a>
                 {/foreach}
             {else}
                 <br>
@@ -48,7 +48,7 @@
             {if !empty($event.netnode_location)}<br>{icon name="location"} {$event.netnode_location}{/if}
         {else}
         {if $event.customername}
-            {icon name="customer"} <A href="?m=customerinfo&amp;id={$event.customerid}">{$event.customername|truncate:"30":"...":true}</A><br>
+            {icon name="customer"} <A href="?m=customerinfo&amp;id={$event.customerid}">{$event.customername|truncate:"30":"&hellip;":true}</A><br>
         {if !empty($event.address_id)}
             {icon name="location"} {$event.location|escape}
         {elseif !empty($event.nodeid)}
