--- a/templates/default/menu-panel.html
+++ b/templates/default/menu-panel.html
@@ -84,7 +84,7 @@
 				<select size="1" id="select_context_division" name="select_context_division" {tip text="Global division context"}>
 					{foreach $context_divisions as $division}
 						<option value="{$division.id}" {if $division.id == $division_context}selected{/if}>
-							{$division.label|truncate:30:"...":true|escape}
+							{$division.label|truncate:30:"&hellip;":true|escape}
 						</option>
 					{/foreach}
 				</select>
@@ -124,7 +124,7 @@
 					<div {tip class="tip" text="Allows you to logout" bold=1} onClick="{if ConfigHelper::getConfig('phpui.logout_confirmation')}confirmDialog('{trans("Are you sure that you want to logout?")}', this).done(function() { return location.href='?m=logout&is_sure=1'; });{else}location.href='?m=logout&is_sure=1';{/if}">
 						<div class="box1">
 							<i class="lms-ui-menu-item-icon lms-ui-icon-logout"></i>
-							{trans("Logout")} {$layout.logname|truncate:10:"..."}
+							{trans("Logout")} {$layout.logname|truncate:10:"&hellip;"}
 						</div>
 					</div>
 				</div>
