--- a/templates/default/node/nodegrouplistshort.html
+++ b/templates/default/node/nodegrouplistshort.html
@@ -33,7 +33,7 @@
 		<TD WIDTH="99%" onClick="parent.location.href='?m=nodegroupinfo&amp;id={$nodegroups[nodegroups].id}';" class="nobr">
 			<B>{$nodegroup.name}</B><BR>
 			{*
-			    {$nodegroup.description|truncate:50:"...":true}
+			    {$nodegroup.description|truncate:50:"&hellip;":true}
 			*}
 		</TD>
 	</TR>
