--- a/templates/default/tariff/tariffinfo.html
+++ b/templates/default/tariff/tariffinfo.html
@@ -420,7 +420,7 @@
                                 <OPTION value="0" {if !$netid}SELECTED{/if}>{trans("- all networks -")}</OPTION>
                                 {section name=networks loop=$networks}
                                     <OPTION value="{$networks[networks].id}" {if $networks[networks].id == $netid}SELECTED{/if}>
-                                    {$networks[networks].name|truncate:30:"...":true}
+                                    {$networks[networks].name|truncate:30:"&hellip;":true}
                                     </OPTION>
                                 {/section}
                             </SELECT>
@@ -437,7 +437,7 @@
                         <IMG SRC="img/customer.gif" ALT="">
                         <A HREF="?m=customerinfo&id={$tariff.customers[l2].id}"{if !$tariff.customers[l2].active} class="blend"{/if}>
                             ({$tariff.customers[l2].id|string_format:"%04d"})
-                            {$tariff.customers[l2].customername|truncate:50:" ..."}
+                            {$tariff.customers[l2].customername|truncate:50:"&hellip;"}
                             {if $tariff.customers[l2].cnt > 1}({$tariff.customers[l2].cnt}){/if}
                         </A>
                     </TD>
