--- a/templates/default/traffic/traffic.html
+++ b/templates/default/traffic/traffic.html
@@ -24,7 +24,7 @@
 				{section name=download loop=$download.name}
 				<TR>
 					<TD WIDTH="1%" NOWRAP>
-						<B><A HREF="?m=nodeinfo&id={$download.nodeid[download]}">{if $showips}{$download.ipaddr[download]}{else}{$download.name[download]|truncate:25:"...":true}{/if}</A></B>
+						<B><A HREF="?m=nodeinfo&id={$download.nodeid[download]}">{if $showips}{$download.ipaddr[download]}{else}{$download.name[download]|truncate:25:"&hellip;":true}{/if}</A></B>
 					</TD>
 					<TD CLASS="fright hand" WIDTH="99%" NOWRAP>
 						<IMG SRC="img/redpx.gif" HEIGHT="12" WIDTH="{$download.bar[download]}" BORDER="1" ALT="" {tip a=$download.nodeid[download] b=$bar c=$datefrom d=$dateto sticky=1 popup='?m=trafficgraph&nodeid=$a&amp;bar=$b&from=$c&to=$d'}>
@@ -55,7 +55,7 @@
 				{section name=upload loop=$upload.name}
 				<TR>
 					<TD WIDTH="1%" NOWRAP>
-						<B><A HREF="?m=nodeinfo&id={$upload.nodeid[upload]}">{if $showips}{$upload.ipaddr[upload]}{else}{$upload.name[upload]|truncate:25:"...":true}{/if}</A></B>
+						<B><A HREF="?m=nodeinfo&id={$upload.nodeid[upload]}">{if $showips}{$upload.ipaddr[upload]}{else}{$upload.name[upload]|truncate:25:"&hellip;":true}{/if}</A></B>
 					</TD>
 					<TD CLASS="fright hand" WIDTH="99%" NOWRAP>
 						<IMG SRC="img/bluepx.gif" HEIGHT="12" WIDTH="{$upload.bar[upload]}" BORDER="1" ALT="" {tip a=$upload.nodeid[upload] b=$bar c=$datefrom d=$dateto sticky=1 popup='?m=trafficgraph&nodeid=$a&amp;bar=$b&from=$c&to=$d'}>
@@ -127,7 +127,7 @@
 			<SELECT SIZE="1" NAME="net">
 				<OPTION VALUE="0">{trans("- all -")}</OPTION>
 				{section name="netlist" loop=$netlist}
-				<OPTION VALUE="{$netlist[netlist].id}" {if $netlist[netlist].id == $trafficnet}SELECTED{/if}>{$netlist[netlist].name|truncate:30:"...":true}</OPTION>
+				<OPTION VALUE="{$netlist[netlist].id}" {if $netlist[netlist].id == $trafficnet}SELECTED{/if}>{$netlist[netlist].name|truncate:30:"&hellip;":true}</OPTION>
 				{/section}
 			</SELECT>
 		</TD>
