--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -201,10 +201,10 @@
 			{if $doc.cuserid} / {$doc.cusername|escape}{/if}
 			{if $doc.closed == 3}
 				{if !$doc.cuserid}
-					{trans("(customer/sms)")}
+					{icon name="sms" tip="customer has accepted document via sms"}
 				{/if}
 			{elseif $doc.closed == 2}
-				{trans("(customer/scans)")}
+				{icon name="sign" tip="attached document scans with customer signature"}
 			{/if}
 			<BR><B>{assign var=type value=$doc.type}{$_DOCTYPES.$type}</B>
 		</TD>
